force-app/main/default/objects/Employee__c/fields/Admission__c.field-meta.xml
<CustomField>
    <fullName>Admission__c</fullName>
    <label>Admission</label>
    <referenceTo>Admission__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>