force-app/main/default/objects/Employee__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lucknow</fullName>
            </value>
            <value>
                <fullName>Allahabad</fullName>
            </value>
            <value>
                <fullName>Faizabad</fullName>
            </value>
            <value>
                <fullName>Texas</fullName>
            </value>
            <value>
                <fullName>Illinois</fullName>
            </value>
            <value>
                <fullName>New Jersey</fullName>
            </value>
            <value>
                <fullName>Bejing</fullName>
            </value>
            <value>
                <fullName>Wuhan</fullName>
            </value>
            <value>
                <fullName>Sanghai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>