force-app/main/default/objects/Employee__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clerk</fullName>
            </value>
            <value>
                <fullName>Teaching Staff</fullName>
            </value>
            <value>
                <fullName>Management Staff</fullName>
            </value>
            <value>
                <fullName>Admin Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>