force-app/main/default/objects/Employee__c/fields/Emailid__c.field-meta.xml
<CustomField>
    <fullName>Emailid__c</fullName>
    <label>Emailid</label>
    <type>Email</type>
</CustomField>