force-app/main/default/objects/Employee__c/fields/Name_of_Employee__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Employee__c</fullName>
    <label>Name of Employee</label>
    <length>80</length>
    <type>Text</type>
</CustomField>