force-app/main/default/objects/Employee__c/validationRules/Salarycheck.validationRule-meta.xml
<ValidationRule>
    <fullName>Salarycheck</fullName>
    <active>true</active>
    <errorConditionFormula>Salary__c   &lt;  0</errorConditionFormula>
    <errorMessage>Salary should be greater than Zero.</errorMessage>
</ValidationRule>